# dev-notes-cli

./: .gitignore  LICENSE  Makefile  README.md  README.zh-CN.md  pyproject.toml  setup.py
devnotes/: cli.py  config.py  doctor.py  generator.py  templates.py  utils.py
docs/: commit-message-template.md  plan.md
examples/: example-interview.md  example-note.md  example-project.md
tests/: test_config.py  test_generator.py  test_slug.py
